--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -2,12 +2,16 @@ root: true
 env:
   es2021: true
   node: true
-parser: "@typescript-eslint/parser"
+parser: '@typescript-eslint/parser'
 parserOptions:
   ecmaVersion: 2021
   sourceType: module
 plugins:
-  - "@typescript-eslint"
+  - '@typescript-eslint'
+  - 'prettier'
 extends:
-  - "plugin:@typescript-eslint/recommended"
-  - "htmlacademy/node"
+  - 'plugin:@typescript-eslint/recommended'
+  - 'htmlacademy/node'
+  - 'prettier'
+rules:
+  'prettier/prettier': 2
