--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "start": "npm run build && node ./dist/main.js",
     "build": "npm run clean && npm run compile",
     "lint": "eslint src/ --ext .ts",
+    "lint:fix": "eslint --fix --ext .ts",
     "compile": "tsc -p tsconfig.json",
     "clean": "rimraf dist",
+    "clean:node_modules": "rimraf node_modules",
+    "prettier:format": "prettier --config .prettierrc . --write",
     "ts": "ts-node"
   },
   "devDependencies": {
@@ -22,6 +25,9 @@
     "@typescript-eslint/parser": "6.7.0",
     "eslint": "8.49.0",
     "eslint-config-htmlacademy": "9.1.1",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "prettier": "3.0.3",
     "rimraf": "5.0.1",
     "ts-node": "10.9.1",
     "typescript": "5.2.2"
@@ -30,5 +36,8 @@
   "engines": {
     "node": "^18.0.0",
     "npm": ">=8"
+  },
+  "dependencies": {
+    "chalk": "^5.3.0"
   }
 }
