--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "clean": "rimraf dist",
     "clean:node_modules": "rimraf node_modules",
     "prettier:format": "prettier --config .prettierrc . --write",
-    "ts": "ts-node"
+    "ts": "ts-node",
+    "mock:server": "json-server ./mocks/mock-server-data.json --port 5173"
   },
   "devDependencies": {
     "@types/node": "18.17.17",
@@ -38,6 +39,9 @@
     "npm": ">=8"
   },
   "dependencies": {
-    "chalk": "5.3.0"
+    "chalk": "5.3.0",
+    "dayjs": "^1.11.10",
+    "got": "^13.0.0",
+    "json-server": "^0.17.4"
   }
 }
