--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "got": "13.0.0",
     "inversify": "6.0.1",
     "json-server": "0.17.4",
+    "mongoose": "7.6.0",
     "pino": "8.15.6",
     "reflect-metadata": "0.1.13"
   }
