--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-config-htmlacademy": "9.1.1",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-prettier": "5.0.0",
+    "http-status-codes": "2.3.0",
     "nodemon": "3.0.1",
     "pino-pretty": "10.2.3",
     "prettier": "3.0.3",
