feat: fix small issues

--- a/specification/project.spec.yml
+++ b/specification/project.spec.yml
@@ -662,7 +662,7 @@ components:
           type: boolean
           example: true
 
-        isFavourite:
+        isFavorite:
           type: boolean
           example: false
 
