feat: update API spec

--- a/specification/project.spec.yml
+++ b/specification/project.spec.yml
@@ -110,6 +110,14 @@ paths:
       summary: Get list of offers for specific city
       description: Returns a list of city objects.
 
+      parameters:
+        - in: query
+          name: cityId
+          required: true
+          schema:
+            type: integer
+          description: Unique idetifier of a city
+
       responses:
         "200":
             description: Array of city object.
@@ -118,7 +126,7 @@ paths:
                 schema:
                   $ref: '#/components/schemas/city'
 
-  /rentOffers/{numberOfRentOffers}:
+  /rentOffers?limit=10:
     get:
       tags:
         - rentOffers
@@ -127,7 +135,7 @@ paths:
 
       parameters:
         - in: query
-          name: numberOfRentOffers
+          name: limit
           required: false
           schema:
             type: integer
@@ -314,20 +322,12 @@ paths:
                 schema:
                   $ref: '#/components/schemas/getRentOffer'
 
-  /comments/{offerId}:
-    get:
+  /comments:
+    post:
       tags:
         - comments
-      summary: Get a list of comments for a specific rent offer (50 or less items)
-      description: Returns a list of rent offer objects
-
-      parameters:
-        - in: query
-          name: offerId
-          required: true
-          schema:
-            type: integer
-          description: Unique idetifier of a rent offer
+      summary: Add a new comment to a specific rent offer
+      description: Returns a newly created comment object
 
       requestBody:
         description: The data to create a new comment.
@@ -336,28 +336,6 @@ paths:
             schema:
               $ref: '#/components/schemas/createComment'
         required: true
-
-      responses:
-        "200":
-            description: A list of comments objects.
-            content:
-              application/json:
-                schema:
-                  $ref: '#/components/schemas/comment'
-
-    post:
-      tags:
-        - comments
-      summary: Add a new comment to a specific rent offer
-      description: Returns a newly created comment object
-
-      parameters:
-        - in: query
-          name: offerId
-          required: true
-          schema:
-            type: integer
-          description: Unique idetifier of a rent offer
 
       responses:
         "200":
@@ -597,17 +575,13 @@ components:
           type: string
           example: My awesome comment
 
-        publishDate:
-          type: string
-          example: "2022-04-06T08:45:40.283Z"
-
-        rating:
-          type: number
-          example: 8
-
         userId:
           type: string
-          example: 6329c3d6a04ab1061c6425ea
+          example: "2322kd2kemd2"
+
+        rentOfferId:
+          type: string
+          example: "1231lx0sa2kemd2"
 
     user:
       type: object
@@ -620,6 +594,14 @@ components:
         email:
           type: string
           example: john.lennon@gmail.com
+
+        firstName:
+          type: string
+          example: John
+
+        lastName:
+          type: string
+          example: Lennon
 
     city:
       type: object
@@ -729,13 +711,8 @@ components:
           type: string
           example: "2022-04-06T08:45:40.283Z"
 
-        rating:
-          type: number
-          example: 8
-
-        userId:
-          type: string
-          example: 6329c3d6a04ab1061c6425ea
+        user:
+           $ref: '#/components/schemas/user'
 
     defaultPayloadData:
         type: object
