--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "express-async-handler": "^1.2.0",
     "got": "13.0.0",
     "inversify": "6.0.1",
+    "jose": "5.0.1",
     "json-server": "0.17.4",
     "mime-types": "2.1.35",
     "mongoose": "7.5.0",
