--- a/specification/project.spec.yml
+++ b/specification/project.spec.yml
@@ -1,4 +1,4 @@
-openapi: 3.0.0
+openapi: 3.1.0
 info:
   title: API server for «Six cities» project.
   description: |-
@@ -94,6 +94,85 @@ paths:
       summary: Upload avatar image
       description: Uploads an image of user's avatar. The image should be in `png` or `jpg` format.
 
+  /users/{userId}/rentOffers/favorite:
+    get:
+      tags:
+        - users
+      summary: Get a list of favorite rent offers
+      description: Returns a list of favorite rent offers for a specific user
+
+      parameters:
+        - in: query
+          name: userId
+          required: true
+          schema:
+            type: integer
+          description: Unique idetifier of a user
+
+      responses:
+        "200":
+            description: A list of favorite rent offers.
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/shortRentOffer'
+
+  /users/{userId}/rentOffers/{rentOfferId}/favorite:
+    post:
+      tags:
+        - users
+      summary: Add rent offer to a favorite list for a specific user
+      description: Returns a list of favorite rent offers for a specific user
+
+      parameters:
+        - in: query
+          name: userId
+          required: true
+          schema:
+            type: integer
+          description: Unique idetifier of a user
+        - in: query
+          name: rentOfferId
+          required: true
+          schema:
+            type: integer
+          description: Unique idetifier of a rent offer
+
+      responses:
+        "200":
+            description: A list of favorite rent offers.
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/shortRentOffer'
+    delete:
+      tags:
+        - users
+      summary: Remove rent offer from a favorite list for a specific user
+      description: Returns a list of favorite rent offers for a specific user
+
+      parameters:
+        - in: query
+          name: userId
+          required: true
+          schema:
+            type: integer
+          description: Unique idetifier of a user
+        - in: query
+          name: rentOfferId
+          required: true
+          schema:
+            type: integer
+          description: Unique idetifier of a rent offer
+
+      responses:
+        "200":
+            description: A list of favorite rent offers.
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/shortRentOffer'
+
   /cities:
     get:
       tags:
@@ -131,6 +210,33 @@ paths:
               application/json:
                 schema:
                   $ref: '#/components/schemas/city'
+        "404":
+            description: City with cityId is not found
+
+  /cities/{cityId}/rentOffers/premium:
+    get:
+      tags:
+        - cities
+      summary: Get list of premium offers for specific city
+      description: Returns a list of premiun rent offers (not more that 3 per request).
+
+      parameters:
+        - in: query
+          name: cityId
+          required: true
+          schema:
+            type: integer
+          description: Unique idetifier of a city
+
+      responses:
+        "200":
+            description: Array of premium city object.
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/city'
+        "404":
+            description: City with cityId is not found
 
   /rentOffers?limit=10:
     get:
@@ -178,7 +284,7 @@ paths:
                 schema:
                   $ref: '#/components/schemas/rentOffer'
 
-    put:
+    patch:
       tags:
         - rentOffers
       summary: Edit rent offer
@@ -245,66 +351,6 @@ paths:
                 schema:
                   $ref: '#/components/schemas/rentOffer'
 
-  /rentOffers/favorite:
-     get:
-      tags:
-        - rentOffers
-      summary: Get a list of favorite rent offers
-      description: Returns a list of favorite rent offers
-
-      responses:
-        "200":
-            description: A list of favorite rent offers.
-            content:
-              application/json:
-                schema:
-                  $ref: '#/components/schemas/getRentOffer'
-
-  /rentOffers/{offerId}/favorite:
-    post:
-      tags:
-        - rentOffers
-      summary: Update favorite list
-      description: Adds a specific rent offer to a favorite list.
-
-      parameters:
-        - in: query
-          name: offerId
-          required: true
-          schema:
-            type: integer
-          description: Unique idetifier of a rent offer
-
-      responses:
-        "200":
-            description: Default payload object.
-            content:
-              application/json:
-                schema:
-                  $ref: '#/components/schemas/defaultPayloadData'
-
-    delete:
-      tags:
-        - rentOffers
-      summary: Update favorite list
-      description: Remove a specific rent offer from a favorite list.
-
-      parameters:
-        - in: query
-          name: offerId
-          required: true
-          schema:
-            type: integer
-          description: Unique idetifier of a rent offer
-
-      responses:
-        "200":
-            description: Default payload object.
-            content:
-              application/json:
-                schema:
-                  $ref: '#/components/schemas/defaultPayloadData'
-
   /rentOffers/{offerId}/comments:
     post:
       tags:
@@ -327,29 +373,6 @@ paths:
               application/json:
                 schema:
                   $ref: '#/components/schemas/comment'
-
-  /rentOffers/premium/{cityId}:
-     get:
-      tags:
-        - rentOffers
-      summary: Get a list of premium rent offers (not more than 3 items in one request)
-      description: Returns a list of premium rent offers
-
-      parameters:
-        - in: query
-          name: cityId
-          required: true
-          schema:
-            type: integer
-          description: Unique idetifier of a city
-
-      responses:
-        "200":
-            description: A list of premium rent offer objects (3 items).
-            content:
-              application/json:
-                schema:
-                  $ref: '#/components/schemas/getRentOffer'
 
   /comments:
     post:
@@ -703,6 +726,60 @@ components:
         authorId:
           type: string
           example: 6329c3d6a04ab1061c6425ea
+
+        commentCount:
+          type: number
+          example: 11
+
+    shortRentOffer:
+      type: object
+
+      properties:
+        id:
+          type: string
+          example: 6329c3d6a04ab1061c6425ea
+
+        title:
+          type: string
+          example: Wood and stone cozy place
+
+        publishDate:
+          type: string
+          example: "2022-04-06T08:45:40.283Z"
+
+        city:
+          type: object
+          properties:
+            name:
+              type: string
+              example: "Amsterdam"
+            latitude:
+              type: number
+              example: 52.370216
+
+            longitude:
+              type: number
+              example: 4.895168
+
+        preview:
+          type: string
+          example: "preview.jpg"
+
+        isPremium:
+          type: boolean
+          example: true
+
+        rating:
+          type: number
+          example: 8
+
+        houseType:
+          type: string
+          example: "Apartment"
+
+        price:
+          type: number
+          example: 120
 
         commentCount:
           type: number
