feat: update env example

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,6 @@ DB_NAME='my_awesome_database'
 
 # Path to a directory to store files
 UPLOAD_DIRECTORY='files'
+
+# Secret for generating new JWTs
+JWT_SECRET='my_awesome_jwt_secret"
