feat: add default user avatar

--- a/.env.example
+++ b/.env.example
@@ -20,4 +20,10 @@ DB_NAME='my_awesome_database'
 UPLOAD_DIRECTORY='files'
 
 # Secret for generating new JWTs
-JWT_SECRET='my_awesome_jwt_secret"
+JWT_SECRET='my_awesome_jwt_secret'
+
+# Host the server is running
+HOST='localhost'
+
+# Directory for keeping static resources such as default avatar image
+STATIC_DIRECTORY_PATH='/default'
